src-liberty_parse-2.6/test/example.sppm.lib
library (sppm) {

  delay_model : polynomial;
  power_model : polynomial;

  poly_template (delay_pt) {
    variables (input_net_transition, voltage);
    variable_1_range (1, 5);
    variable_2_range (2.7, 3.6);
  }
  power_poly_template (power_pt) {
    variables (input_net_transition, voltage);
    variable_1_range (1, 5);
    variable_2_range (2.7, 3.6);
  }

  cell (IV) {
    pin (A) {
      direction : input;
    }
    pin (Z) {
      direction : output;
      function  : "!A";
      timing () {
        related_pin : A;
        cell_rise (delay_pt) {
          orders ("1, 1");
          coefs ("1, 1, 1, 1");
        }
        cell_fall (delay_pt) {
          orders ("1, 1");
          coefs ("1, 1, 1, 1");
        }
        rise_transition (delay_pt) {
          orders ("1, 1");
          coefs ("1, 1, 1, 1");
        }
        fall_transition (delay_pt) {
          orders ("1, 1");
          coefs ("1, 1, 1, 1");
        }
      }
      internal_power () {
        related_pin : A;
        rise_power (power_pt) {
          orders ("1, 1");
          coefs ("2, 2, 2, 2");
        }
        fall_power (power_pt) {
          orders ("1, 1");
          coefs ("2, 2, 2, 2");
        }
      }
    }
  }
}
